--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "node": ">=15.14.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.1.0",
+    "mongoose": "^8.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
